fixed-modal on iphone

--- a/sass/__modal.scss
+++ b/sass/__modal.scss
@@ -27,3 +27,10 @@ button.close {
     -moz-box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 1);
     box-shadow: 2px 2px 6px 1px rgba(0, 0, 0, 1);
 }
+
+
+body{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
